[package]
name = "sfo-io"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/wugren/sfo-io.git"
license-file = "LICENSE"
description = "A Rust library for handling IO operations, providing asynchronous read/write and stream processing capabilities."

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
shlex = "1.3.0"
sfo-result = { version = "0.2.7"}
