[package]
name = "sfo-io"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/wugren/sfo-io.git"
license-file = "LICENSE"
description = "A Rust library for handling IO operations, providing asynchronous read/write and stream processing capabilities."

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
shlex = "1.3.0"
sfo-result = { version = "0.2.7"}
governor = "0.10.1"
nonzero_ext = "0.3.0"
futures = "0.3.31"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[[test]]
name = "stat_stream"
path = "src/stat_stream.rs"

[[test]]
name = "limit_stream"
path = "src/limit_stream.rs"
