[package]
name = "sfo-io"
version = "0.1.15"
edition = "2024"
repository = "https://github.com/wugren/sfo-io.git"
license-file = "LICENSE"
description = "A Rust library for handling IO operations, providing asynchronous read/write and stream processing capabilities."

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
shlex = "1.3"
sfo-result = { version = "0.2"}
governor = "0.10"
nonzero_ext = "0.3"
futures = "0.3"
pin-project = "1.1"
sfo-split = { version = "0.1", features = ["io"] }
async-recursion = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
